feat: 커스텀 Docker Registry CI/CD 설정
🐳 Docker Registry 변경
- Registry: ghcr.io → art.montkim.com
- 이미지명: wedding-invitation
- 인증: DOCKER_USERNAME, DOCKER_PASSWORD secrets 사용

🔧 워크플로우 개선
- SHA 기반 태깅 (6자리 단축 SHA)
- main 브랜치에서 latest 태그도 함께 push
- production environment 설정
- 더 상세한 빌드 요약 정보

📋 빌드 태그 전략
- 모든 커밋: art.montkim.com/wedding-invitation:{SHORT_SHA}
- main 브랜치: art.montkim.com/wedding-invitation:latest 추가

🚀 배포 준비
- 빌드 완료 후 배포 가이드 제공
- Docker run 명령어 자동 생성

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,12 +12,13 @@ on:
   workflow_dispatch: # 수동 트리거 허용
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: art.montkim.com
+  IMAGE_NAME: wedding-invitation
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: read
       packages: write
@@ -29,65 +30,65 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Container Registry
+    - name: Extract short SHA
+      id: vars
+      run: echo "SHORT_SHA=${GITHUB_SHA::6}" >> $GITHUB_ENV
+
+    - name: Log in to Docker Registry
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix=sha-{{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-    - name: Docker image size
       if: github.event_name != 'pull_request'
       run: |
-        echo "### 📦 Docker Image Built Successfully" >> $GITHUB_STEP_SUMMARY
+        # Build and push with SHA tag
+        docker build -t "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}" .
+        docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}"
+        
+        # Also push as latest if main branch
+        if [ "${{ github.ref }}" = "refs/heads/main" ]; then
+          docker tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}" "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+          docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+        fi
+
+    - name: Build Summary
+      if: github.event_name != 'pull_request'
+      run: |
+        echo "### 📦 Wedding Invitation Docker Image Built Successfully" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "**Image Tags:**" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
-        echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+        echo "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}" >> $GITHUB_STEP_SUMMARY
+        if [ "${{ github.ref }}" = "refs/heads/main" ]; then
+          echo "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
+        fi
         echo '```' >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "**Registry:** \`${{ env.REGISTRY }}\`" >> $GITHUB_STEP_SUMMARY
         echo "**Repository:** \`${{ env.IMAGE_NAME }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "**SHA:** \`${{ env.SHORT_SHA }}\`" >> $GITHUB_STEP_SUMMARY
 
-  # 별도의 deployment job (옵션)
-  deploy:
+  # 배포 준비 완료 알림
+  deploy-ready:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build-and-push
     runs-on: ubuntu-latest
-    environment: production # GitHub Environment 설정 필요
     
     steps:
     - name: Deploy notification
       run: |
-        echo "### 🚀 Deployment Ready" >> $GITHUB_STEP_SUMMARY
+        echo "### 🎉 Wedding Invitation - Deployment Ready" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "The Docker image has been built and is ready for deployment." >> $GITHUB_STEP_SUMMARY
+        echo "The Docker image has been built and pushed to the registry." >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "**Pull and run the image:**" >> $GITHUB_STEP_SUMMARY
         echo '```bash' >> $GITHUB_STEP_SUMMARY
         echo "docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
-        echo "docker run -d -p 3000:3000 ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
+        echo "docker run -d -p 3000:3000 --name wedding-invitation ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "**Access the application:** http://localhost:3000" >> $GITHUB_STEP_SUMMARY
