--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -186,12 +186,7 @@ jobs:
         git config user.name "${{ github.actor }}"
         git config user.email "${{ github.actor }}@users.noreply.github.com"
         git add .
-        git commit -m "🚀 Update wedding-invitation image tag to ${{ env.SHORT_SHA }}
-
-Updated image: montkim9/wedding-invitation:${{ env.SHORT_SHA }}
-Triggered by: ${{ github.event.head_commit.message }}
-Commit SHA: ${{ github.sha }}
-Author: ${{ github.actor }}"
+        git commit -m "🚀 Update wedding-invitation image tag to ${{ env.SHORT_SHA }} - Updated image: montkim9/wedding-invitation:${{ env.SHORT_SHA }}, Triggered by: ${{ github.event.head_commit.message }}, Commit SHA: ${{ github.sha }}, Author: ${{ github.actor }}"
         git push
 
     - name: Update Summary
