--- a/.github/workflows/docker-build-no-cache.yml
+++ b/.github/workflows/docker-build-no-cache.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Extract short SHA
       id: vars
-      run: echo "SHORT_SHA=${GITHUB_SHA::6}" >> $GITHUB_ENV
+      run: echo "SHORT_SHA=${GITHUB_SHA:0:6}" >> $GITHUB_ENV
 
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
@@ -186,12 +186,7 @@ jobs:
         git config user.name "${{ github.actor }}"
         git config user.email "${{ github.actor }}@users.noreply.github.com"
         git add .
-        git commit -m "🚀 Update wedding-invitation image tag to ${{ env.SHORT_SHA }}
-
-Updated image: montkim9/wedding-invitation:${{ env.SHORT_SHA }}
-Triggered by: ${{ github.event.head_commit.message }}
-Commit SHA: ${{ github.sha }}
-Author: ${{ github.actor }}"
+        git commit -m "🚀 Update wedding-invitation image tag to ${{ env.SHORT_SHA }} - Updated image: montkim9/wedding-invitation:${{ env.SHORT_SHA }}, Triggered by: ${{ github.event.head_commit.message }}, Commit SHA: ${{ github.sha }}, Author: ${{ github.actor }}"
         git push
 
     - name: Update Summary
@@ -238,4 +233,4 @@ Author: ${{ github.actor }}"
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Workflow Run:** [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** \`${{ github.ref_name }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Commit:** \`${{ github.sha::8 }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Commit:** \`${GITHUB_SHA:0:8}\`" >> $GITHUB_STEP_SUMMARY
